--- a/index.html
+++ b/index.html
@@ -4,16 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web dev portfolio</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="open-sans-normal">
     <header>
+        <nav>
+            <h1 class="nav-title">Ma<span class="text-primary">r</span>y</h1>
 
+            <ul>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href=""><button>Hire me</button></a></li>
+            </ul>
+        </nav>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
     
 </body>
