--- a/index.html
+++ b/index.html
@@ -7,16 +7,28 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="open-sans-normal">
-    <header>
+    <header class="header bg-color">
         <nav>
             <h1 class="nav-title">Ma<span class="text-primary">r</span>y</h1>
 
             <ul>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href=""><button>Hire me</button></a></li>
+                <li><a class="dark-2" href="">Portfolio</a></li>
+                <li><a class="dark-2" href="">Blog</a></li>
+                <li><a href=""><button class="btn-primary">Hire me</button></a></li>
             </ul>
         </nav>
+
+        <div class="banner">
+            <div class="banner-content">
+                <h4 class="banner-greetings">Hi, I am</h4>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p class="banner-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro sint saepe eveniet! Itaque ab non excepturi quisquam est eaque omnis.</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+
+            <img class="banner-image" src="images/hardy.png" alt="">
+        </div>
     </header>
     <main>
 
