Made the website responsive for mobile view

--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
                 <h1 class="banner-title">Ashraful Shuvon</h1>
                 <p class="banner-subtitle">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning
                     because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <div class="btn-container">
+                    <button class="btn-primary">Download CV</button>
+                    <button class="btn-primary">Contact</button>
+
+                </div>
             </div>
 
             <img class="banner-image" src="images/hardy.png" alt="">
